--- a/src/index.css
+++ b/src/index.css
@@ -49,16 +49,13 @@ body {
   transform: scale(1.2);
 }
 
-.groups:hover .dropdown{
- display: block;
-
+.groups:hover .dropdown {
+  display: block;
 }
 
-.groups:hover .arrow-ro{
+.groups:hover .arrow-ro {
   rotate: 180deg;
 }
-
-
 
 .abt-nav-img {
   background-image: url(assets/image/background/allpage01.jpg);
@@ -70,55 +67,51 @@ body {
   backface-visibility: hidden;
 }
 
-
 .about-nav-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
-    background: linear-gradient(
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  background: linear-gradient(
     0deg,
     rgba(255, 255, 255, 0.448) 0%,
     rgba(255, 255, 255, 0.403) 50%,
     rgba(255, 255, 255, 0.436) 100%
   );
-
 }
 
 .about-nav-section h1 {
-    font-size: 35px;
-    text-shadow: 1px 1px 3px white;
+  font-size: 35px;
+  text-shadow: 1px 1px 3px white;
 }
 
 .about-nav-section a {
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+  font-weight: bold;
 }
 
 .about-nav-section p {
-    font-size: 20px;
-    font-weight: bold;
-    padding: 0 2%;
-    color: black;
-    text-shadow: 1px 1px 3px white;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 0 2%;
+  color: black;
+  text-shadow: 1px 1px 3px white;
 }
-
 
 @media (max-width: 1068px) {
-.abt-nav-img {
-  background-size: auto;
-  height: 200px;
-}
+  .abt-nav-img {
+    background-size: auto;
+    height: 200px;
+  }
 }
 
 @media (max-width: 668px) {
   .abt-nav-img {
-  height: 150px;
+    height: 150px;
+  }
 }
-}
-
 
 /* !-------------------------------slider------------------------------! */
 
@@ -162,8 +155,6 @@ body {
   font-weight: 400;
 }
 
-
-
 /* !------------------------------testimonial page-----------------------------! */
 .testimonial {
   transition: background-color 0.5s ease, transform 0.3s ease;
@@ -179,7 +170,7 @@ body {
 
 .product-img {
   max-width: 500px;
-  height: 400px;
+  height: 500px;
 }
 
 .product-img img {
@@ -188,6 +179,12 @@ body {
   object-fit: cover;
   border-radius: 10px;
   transition: transform 0.3s ease;
+}
+
+@media (max-width: 580px) {
+  .product-img {
+    height: 400px;
+  }
 }
 
 /* !-----------------------------loader page-----------------------------! */
@@ -237,106 +234,113 @@ body {
   background-attachment: fixed;
 }
 
-
-
-
-
 /* -------------------------------------Brand carousel----------------------------- */
 
 .marquee {
-    width: 100%;
-    overflow: hidden;
-    /* background-color: #f2f2f2; */
-    display: flex;
-    align-items: center;
-    position: relative;
+  width: 100%;
+  overflow: hidden;
+  /* background-color: #f2f2f2; */
+  display: flex;
+  align-items: center;
+  position: relative;
 }
 
-.footeeer{
-    max-width: 1200px;
-    margin: auto;
+.footeeer {
+  max-width: 1200px;
+  margin: auto;
 }
 
 .marquee-content {
-    display: flex;
-    animation: marquee 20s linear infinite;
-    /* Infinite animation */
-    animation-play-state: running;
-    /* Default running state */
+  display: flex;
+  animation: marquee 20s linear infinite;
+  /* Infinite animation */
+  animation-play-state: running;
+  /* Default running state */
 }
 
 .marquee:hover .marquee-content {
-    animation-play-state: paused;
-    /* Pause the animation on hover */
+  animation-play-state: paused;
+  /* Pause the animation on hover */
 }
 
 .marquee-item {
-    flex-shrink: 0;
-    width: 150px;
-    /* Set your desired width */
-    height: 100px;
-    background-color: #FEFDF9;
-    /* background: #FEFDF9; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 15px;
-    font-size: 20px;
-    transition: transform 0.4s ease, filter 0.4s ease;
-    border-radius: 10px;
-    border:2px solid #025F5F;
+  flex-shrink: 0;
+  width: 150px;
+  /* Set your desired width */
+  height: 100px;
+  background-color: #fefdf9;
+  /* background: #FEFDF9; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 15px;
+  font-size: 20px;
+  transition: transform 0.4s ease, filter 0.4s ease;
+  border-radius: 10px;
+  border: 2px solid #025f5f;
 }
 
 .marquee-item img {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    object-fit: contain;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: contain;
 }
 
 .marquee:hover .marquee-item {
-    filter: blur(4px);
-    transform: scale(0.9);
+  filter: blur(4px);
+  transform: scale(0.9);
 }
 
 .marquee .marquee-item:hover {
-    filter: none;
-    transform: scale(1.2);
+  filter: none;
+  transform: scale(1.2);
 }
 
 @keyframes marquee {
-    0% {
-        transform: translateX(0);
-    }
+  0% {
+    transform: translateX(0);
+  }
 
-    100% {
-        transform: translateX(-50%);
-    }
+  100% {
+    transform: translateX(-50%);
+  }
 }
 
-
-
-.contact-shadow{
-  box-shadow: rgba(0, 251, 255, 0.324) 0px 2px 5px 2px, rgba(0, 255, 200, 0.402) 0px 1px 3px -1px;
+.contact-shadow {
+  box-shadow: rgba(0, 251, 255, 0.324) 0px 2px 5px 2px,
+    rgba(0, 255, 200, 0.402) 0px 1px 3px -1px;
 }
-
-
-
-
 
 @keyframes fadeIn {
-  from { opacity: 0; }
-  to { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 @keyframes fadeInDown {
-  from { opacity: 0; transform: translateY(-20px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 @keyframes fadeInUp {
-  from { opacity: 0; transform: translateY(20px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .animate-fadeIn {
@@ -351,15 +355,45 @@ body {
   animation: fadeInUp 0.8s ease-out forwards;
 }
 
-
-.sign-back{
+.sign-back {
   background-image: url(assets/image/background/signin-back.jpg);
   background-attachment: fixed;
   background-size: cover;
 }
 
-
 .loader {
   display: inline-block;
 }
 
+.imageslider {
+  background-image: url(assets/image/why/05.webp);
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  height: 55vh;
+  background-size: 100% 100%;
+  animation: changeimage 10s ease-in-out infinite;
+}
+
+@keyframes changeimage {
+  0% {
+    background-image: url(assets/image/why/05.webp);
+  }
+
+  25% {
+    background-image: url(assets/image/why/second.jpg);
+  }
+
+  75% {
+    background-image: url(assets/image/why/third.webp);
+  }
+
+  100% {
+    background-image: url(assets/image/why/01.avif);
+  }
+}
+
+@media (max-width: 578px) {
+  .imageslider {
+    height: 47vh;
+  }
+}
